--- a/public/name.html
+++ b/public/name.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <style>
-      body
+      #header-row
       {
         background-image: url("assets/images/green_background.png");
       }
@@ -17,36 +17,12 @@
   </head>
   <body>
     <div class = "container-fluid text-center">
-      <div class = "row">
+      <div class = "row" id="header-row">
         <div class = "col">
-          <img class = "img-fluid" src = "assets/images/top.png" alt = "Reversi logo">
+          <h2>Name page</h2>
         </div>
       </div>
-
-      <div class = "row">
-        <div class = "col">
-          <a href = "name.html" class = "btn btn-lg btn-secondary"> Let's Play
-          </a>
-        </div>
-      </div>
-
-      <div class = "row">
-        <div class = "col">
-          <img class = "img-fluid" src = "assets/images/bottom.png" alt = "Reversi logo 2">
-        </div>
-      </div>
-
-      <div class = "row">
-        <div class = "col">
-          <a href = "about.html" class = "btn btn-lg btn-info"> About
-          </a>
-        </div>
-        <div class = "col">
-          <a href = "https://en.wikipedia.org/wiki/Reversi" class = "btn btn-lg btn-info"> Rules
-          </a>
-        </div>
-      </div>
-
+      
     </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
