--- a/public/name.html
+++ b/public/name.html
@@ -5,12 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <title>Enter your user name for Reversi</title>
+
     <style>
       #header-row
       {
         background-image: url("assets/images/green_background.png");
       }
     </style>
+
+    <script>
+      function submitForm()
+      {
+        var username = $('#username').val();
+        window.location.href = 'lobby.html?username=' + username;
+      }
+    </script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -19,10 +29,22 @@
     <div class = "container-fluid text-center">
       <div class = "row" id="header-row">
         <div class = "col">
-          <h2>Name page</h2>
+          <h2>Enter your User Name</h2>
         </div>
       </div>
-      
+
+      <div class = 'row'>
+        <div class = 'col'>
+          <form onsubmit='submitForm(); return false;' class = 'form-inline'>
+            <div class='form-group'>
+              <label for='username' class='col-form-label sr-only'>Enter your user name</label>
+              <input class='form-control' type='text' value='' id='username' placeholder="Enter your user name"/>
+            </div>
+            <button type='submit' class='btn btn-default btn-primary'>Done</button>
+          </form>
+        </div>
+      </div>
+
     </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
