--- a/public/lobby.html
+++ b/public/lobby.html
@@ -25,32 +25,43 @@
         </div>
       </div>
 
-      <div class = 'row'>
-        <div class = 'col'>
-          <h3>Messages</h3>
-          <div id='messages'>
-          </div>
+      <div class='row align-items-end' id ='players'>
+        <div class='col-9 text-left'>
+          <h3>Players</h3>
         </div>
+        <div class='col-3'>
+        </div>
+
+
       </div>
 
        <div class = 'row'>
-        <div class = 'col'>
-          <form onsubmit='send_message(); return false;'>
-            <div class='form-group'>
+        <div class = 'col text-left'>
+           <h3>Messages</h3>
+          <form class='form-inline' onsubmit='send_message(); return false;'>
               <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
-              <input class='form-control' type='text' value=''
+              <input class='form-control mx-auto w-75' type='text' value=''
               id='send_message_holder' placeholder='Enter your chat message' autocomplete='off'/>
-            </div>
-            <button type='submit' class='btn btn-default btn-primary'>Send</button>
+              <button type='submit' class='btn btn-default btn-primary'>Send</button>
           </form>
+        </div>
+      </div>
 
+
+       <div class = 'row'>
+        <div class = 'col'>
+          <div id='messages'>
+          </div>
         </div>
       </div>
 
     </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src='https://code.jquery.com/jquery-3.1.1.slim.min.js' integrity='sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n' crossorigin='anonymous'></script>
+    <script
+    src='https://code.jquery.com/jquery-3.2.1.min.js'
+    integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='
+    crossorigin='anonymous'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js' integrity='sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb' crossorigin='anonymous'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js' integrity='sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn' crossorigin='anonymous'></script>
   
