week 9 finishing touches

--- a/public/game.html
+++ b/public/game.html
@@ -13,6 +13,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css' integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ' crossorigin='anonymous'>
   </head>
   <body>
+    <div class='all'>
     <div class = 'container-fluid text-center'>
       <div class='row'>
         <div class='offset-2 col text-center'>
@@ -153,5 +154,6 @@
   
       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js" integrity="sha256-fiM0lX3OYzf0FfLBeLqFuCokh+rf1VhI/eanPbzldUM=" crossorigin="anonymous"></script>
       <script src="js/main.js"></script>
+    </div>
   </body>
 </html>
