can now change size of board

--- a/public/game.html
+++ b/public/game.html
@@ -38,7 +38,7 @@
       <div class='row'>
         <div class='col'>
           <table id='game_board'>
-            <tr>
+<!--             <tr>
               <td id='0_0'></td>
                <td id='0_1'></td>
                 <td id='0_2'></td>
@@ -117,7 +117,7 @@
                    <td id='7_5'></td>
                     <td id='7_6'></td>
                      <td id='7_7'></td>
-            </tr>
+            </tr> -->
           </table>
         </div>
       </div>
@@ -153,7 +153,8 @@
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js' integrity='sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn' crossorigin='anonymous'></script>
   
       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js" integrity="sha256-fiM0lX3OYzf0FfLBeLqFuCokh+rf1VhI/eanPbzldUM=" crossorigin="anonymous"></script>
-      <script src="js/main.js"></script>
+      <script  type="text/javascript" src="js/main.js"></script>
+
     </div>
   </body>
 </html>
